# kopp14-verticallandmotion

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: pythonpackage.yaml
src/kopp14_verticallandmotion/: cli.py  kopp14_verticallandmotion_postprocess.py  kopp14_verticallandmotion_preprocess.py
src/kopp14_vlm/: __init__.py  cli.py  kopp14_verticallandmotion_postprocess.py
