[project]
name = "kopp14-vlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "dask>=2025.10.0",
    "netcdf4>=1.7.3",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
    "xarray>=2025.10.1",
]

[project.scripts]
kopp14-vlm = "kopp14_vlm.cli:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
